Fixed the need for double click on tablets when play next click

--- a/src/seplis/web/static/css/show.css
+++ b/src/seplis/web/static/css/show.css
@@ -72,6 +72,10 @@
     float:left;
 }
 
+.show-info .image.play-next {
+    cursor:pointer;
+}
+
 .show-info .image .play-next-button {
     position: absolute; 
     top: 0;
@@ -84,11 +88,11 @@
     background-color:rgba(189,195,199,0.7);
     text-align: center;
     visibility: hidden;
+    pointer-events: none;
 }
 .show-info .image:hover .play-next-button {
     visibility: visible;
     color:#428bca;
-    cursor:pointer;
 }
 
 .show-info .description {
